--- a/userChrome.css
+++ b/userChrome.css
@@ -1,3 +1,8 @@
+/* SETUP:
+ *   Navigate to about:config, set toolkit.legacyUserProfileCustomizations.stylesheets to true
+ *   Store this file in ~/.mozilla/firefox/PROFILE_ID_GOES_HERE/chrome/userChrome.css
+*/   
+
 #main-window[tabsintitlebar="true"]:not([extradragspace="true"]) #TabsToolbar > .toolbar-items {
     opacity: 0;
     pointer-events: none;
